Preliminary Port To 26.1.2